# miniflac-sys

./: Cargo.toml  README.md  build.rs  justfile  miniflac_impl.c
.cargo/: config.toml
examples/: play.rs
src/: audio_loop.rs  flac.rs  lib.rs
tests/: flac_decode.rs  test_440hz.flac  test_440hz_24bit.flac  test_440hz_mono.flac
