[package]
name = "miniflac-sys"
version = "0.1.0"
edition = "2021"

[dependencies]

[build-dependencies]
cc = "1.2"

[features]
default = []
# Enable std support (for host-side tests)
std = []

[dev-dependencies]
# Used in integration tests on host
clap = { version = "4", features = ["derive"] }
rodio = "0.19"

[[example]]
name = "play"
required-features = ["std"]

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 2
